fix: add body overflow: hidden style to take of horizontal overflow issue.

--- a/style.css
+++ b/style.css
@@ -1,3 +1,7 @@
+body {
+  overflow-x: hidden; /* Prevent horizontal scrollbars */
+}
+
 .hero {
   width: 100%;
   height: 100vh;
